fix: tag spacing on event details

--- a/src/app/components/events/event-details/event-details.component.scss
+++ b/src/app/components/events/event-details/event-details.component.scss
@@ -104,7 +104,7 @@ img {
     white-space: nowrap;
 
     .tag-element {
-        margin-bottom: 2px;
+        margin: 0 4px 8px;
     }
 }
 
